fixed alignment issues

--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -38,6 +38,7 @@ h1, h3, p{
     background-color: black;
     letter-spacing: -0.5px;
     border: solid 1px rgba(220,220,220,.6);
+    margin-bottom: 5px;
 }
 .btn-small:hover {
     background-color: goldenrod;
@@ -66,6 +67,11 @@ h1, h3, p{
     height: 500px;
 }
 
+.responsive-img{
+    width: 30%;
+    align-content: center;
+}
+
 .parallax-container{
     background-color: black;
     color:rgba(224, 221, 216,.9);
@@ -79,13 +85,11 @@ h1, h3, p{
 img.responsive-img, video.responsive-video {
     max-width: 100%;
     height: auto;
-    margin-top: 8em;
+    display: block;
+    margin: auto;
 }
 
 
-.row .col.offset-l1 {
-    margin-top: 8em;
-}
 
 .contactCont, contact-wrap{
     text-align: center;
